# vcl

./: .gitignore  accuracy.py  bayesian_layer.py  bayesian_linear_flow.py  claelbo.py  dataloaders.py  experiments.py  generative.py  hyperparam_search.py  main.py  mle.py  mle_disc.py  nb.py  plot.py  plots.py  pyproject.toml  readme.txt  router-ideas.txt  si_disc.py  si_gen.py  si_layer.py  si_wip.py  submission.sh  util.py  vae.py  vae_gen.py  vcl.py  vcl_disc.py  vcl_gen.py
figures/data_raw/: disc_nmnist_per_task_acc.csv  disc_nmnist_per_task_acc_withbaseline.csv  disc_pmnist_per_task_acc.csv  disc_pmnist_per_task_acc_coreset.csv  disc_smnist_per_task_acc.csv  gen_mnist_per_task_test_ll.csv  gen_mnist_per_task_test_ll_withbaseline.csv  gen_mnist_per_task_uncert.csv  gen_mnist_per_task_uncert_withbaseline.csv  gen_nmnist_per_task_test_ll.csv  gen_nmnist_per_task_test_ll_withbaseline.csv  gen_nmnist_per_task_uncert.csv  gen_nmnist_per_task_uncert_withbaseline.csv  pmnist_vcl_regression_hetero_per_task_acc.csv  pmnist_vcl_regression_hetero_per_task_rmse.csv  pmnist_vcl_regression_homo_per_task_acc.csv  pmnist_vcl_regression_homo_per_task_rmse.csv  pmnist_vcl_regression_total_acc_rmse.csv  total_acc_disc_singlehead_smnist.csv  total_acc_pmnist_smnist_nmnist.csv
pretrained/: classifier_mnist.pt  classifier_nmnist.pt  mle_10.pt  mle_100.pt  mle_30.pt
