[project]
name = "vcl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kaleido==0.2.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "plotly>=6.0.1",
    "polars>=1.26.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
]
[tool.ruff]
indent-width = 2
format.quote-style = "single"
